fixing the gallery grid alignment

--- a/29-grid-portfolio/css/components/defaults.css
+++ b/29-grid-portfolio/css/components/defaults.css
@@ -34,14 +34,6 @@ img {
   border: 0;
 }
 
-main ul {
-   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-
-}
-
-
-
 h1,
 h2,
 h3 {
